[package]
name = "ribut"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-serde = { version = "0.8", features = ["bincode"] }
crossterm = { version = "0.19", features = ['event-stream'] }
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
